Fix contentDescription of btam

--- a/app/src/main/res/layout/piece_view.xml
+++ b/app/src/main/res/layout/piece_view.xml
@@ -8,7 +8,7 @@
         android:id="@+id/btam"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="tam"
+        android:contentDescription="btam"
         android:onClick="onClickPiece"
         android:padding="0dp"
         android:scaleType="matrix"
