--- a/app/src/main/res/layout/piece_view.xml
+++ b/app/src/main/res/layout/piece_view.xml
@@ -8,7 +8,7 @@
         android:id="@+id/btam"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="btam"
+        android:contentDescription="@string/btam"
         android:onClick="onClickPiece"
         android:padding="0dp"
         android:scaleType="matrix"
@@ -18,7 +18,7 @@
         android:id="@+id/bio"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="bio"
+        android:contentDescription="@string/bio"
         android:onClick="onClickPiece"
         android:padding="1dp"
         android:scaleType="matrix"
@@ -28,7 +28,7 @@
         android:id="@+id/rio"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="rio"
+        android:contentDescription="@string/rio"
         android:onClick="onClickPiece"
         android:padding="@dimen/piece_padding"
         android:scaleType="matrix"
@@ -38,7 +38,7 @@
         android:id="@+id/bnuak"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="bnuak"
+        android:contentDescription="@string/bnuak"
         android:onClick="onClickPiece"
         android:padding="@dimen/piece_padding"
         android:scaleType="matrix"
@@ -48,7 +48,7 @@
         android:id="@+id/rnuak"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="rnuak"
+        android:contentDescription="@string/rnuak"
         android:onClick="onClickPiece"
         android:padding="@dimen/piece_padding"
         android:scaleType="matrix"
@@ -58,7 +58,7 @@
         android:id="@+id/buai1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="buai"
+        android:contentDescription="@string/buai"
         android:onClick="onClickPiece"
         android:padding="@dimen/piece_padding"
         android:scaleType="matrix"
@@ -68,7 +68,7 @@
         android:id="@+id/buai2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="buai"
+        android:contentDescription="@string/buai"
         android:onClick="onClickPiece"
         android:padding="@dimen/piece_padding"
         android:scaleType="matrix"
@@ -78,7 +78,7 @@
         android:id="@+id/ruai1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="ruai"
+        android:contentDescription="@string/ruai"
         android:onClick="onClickPiece"
         android:padding="@dimen/piece_padding"
         android:scaleType="matrix"
@@ -88,7 +88,7 @@
         android:id="@+id/ruai2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="ruai"
+        android:contentDescription="@string/ruai"
         android:onClick="onClickPiece"
         android:padding="@dimen/piece_padding"
         android:scaleType="matrix"
@@ -98,7 +98,7 @@
         android:id="@+id/btuk1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="btuk"
+        android:contentDescription="@string/btuk"
         android:onClick="onClickPiece"
         android:padding="@dimen/piece_padding"
         android:scaleType="matrix"
@@ -108,7 +108,7 @@
         android:id="@+id/btuk2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="btuk"
+        android:contentDescription="@string/btuk"
         android:onClick="onClickPiece"
         android:padding="@dimen/piece_padding"
         android:scaleType="matrix"
@@ -118,7 +118,7 @@
         android:id="@+id/rtuk1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="rtuk"
+        android:contentDescription="@string/rtuk"
         android:onClick="onClickPiece"
         android:padding="@dimen/piece_padding"
         android:scaleType="matrix"
@@ -128,7 +128,7 @@
         android:id="@+id/rtuk2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="rtuk"
+        android:contentDescription="@string/rtuk"
         android:onClick="onClickPiece"
         android:padding="@dimen/piece_padding"
         android:scaleType="matrix"
@@ -138,7 +138,7 @@
         android:id="@+id/bkua1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="bkua"
+        android:contentDescription="@string/bkua"
         android:onClick="onClickPiece"
         android:padding="@dimen/piece_padding"
         android:scaleType="matrix"
@@ -148,7 +148,7 @@
         android:id="@+id/bkua2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="bkua"
+        android:contentDescription="@string/bkua"
         android:onClick="onClickPiece"
         android:padding="@dimen/piece_padding"
         android:scaleType="matrix"
@@ -158,7 +158,7 @@
         android:id="@+id/rkua1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="rkua"
+        android:contentDescription="@string/rkua"
         android:onClick="onClickPiece"
         android:padding="@dimen/piece_padding"
         android:scaleType="matrix"
@@ -168,7 +168,7 @@
         android:id="@+id/rkua2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="rkua"
+        android:contentDescription="@string/rkua"
         android:onClick="onClickPiece"
         android:padding="@dimen/piece_padding"
         android:scaleType="matrix"
@@ -178,7 +178,7 @@
         android:id="@+id/bmaun1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="bmaun"
+        android:contentDescription="@string/bmaun"
         android:onClick="onClickPiece"
         android:padding="@dimen/piece_padding"
         android:scaleType="matrix"
@@ -188,7 +188,7 @@
         android:id="@+id/bmaun2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="bmaun"
+        android:contentDescription="@string/bmaun"
         android:onClick="onClickPiece"
         android:padding="@dimen/piece_padding"
         android:scaleType="matrix"
@@ -198,7 +198,7 @@
         android:id="@+id/rmaun1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="rmaun"
+        android:contentDescription="@string/rmaun"
         android:onClick="onClickPiece"
         android:padding="@dimen/piece_padding"
         android:scaleType="matrix"
@@ -208,7 +208,7 @@
         android:id="@+id/rmaun2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="rmaun"
+        android:contentDescription="@string/rmaun"
         android:onClick="onClickPiece"
         android:padding="@dimen/piece_padding"
         android:scaleType="matrix"
@@ -218,7 +218,7 @@
         android:id="@+id/bdau1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="bdau"
+        android:contentDescription="@string/bdau"
         android:onClick="onClickPiece"
         android:padding="@dimen/piece_padding"
         android:scaleType="matrix"
@@ -228,7 +228,7 @@
         android:id="@+id/bdau2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="bdau"
+        android:contentDescription="@string/bdau"
         android:onClick="onClickPiece"
         android:padding="@dimen/piece_padding"
         android:scaleType="matrix"
@@ -238,7 +238,7 @@
         android:id="@+id/rdau1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="rdau"
+        android:contentDescription="@string/rdau"
         android:onClick="onClickPiece"
         android:padding="@dimen/piece_padding"
         android:scaleType="matrix"
@@ -248,7 +248,7 @@
         android:id="@+id/rdau2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="rdau"
+        android:contentDescription="@string/rdau"
         android:onClick="onClickPiece"
         android:padding="@dimen/piece_padding"
         android:scaleType="matrix"
@@ -258,7 +258,7 @@
         android:id="@+id/bkaun1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="bkaun"
+        android:contentDescription="@string/bkaun"
         android:onClick="onClickPiece"
         android:padding="@dimen/piece_padding"
         android:scaleType="matrix"
@@ -268,7 +268,7 @@
         android:id="@+id/bkaun2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="bkaun"
+        android:contentDescription="@string/bkaun"
         android:onClick="onClickPiece"
         android:padding="@dimen/piece_padding"
         android:scaleType="matrix"
@@ -278,7 +278,7 @@
         android:id="@+id/rkaun1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="rkaun"
+        android:contentDescription="@string/rkaun"
         android:onClick="onClickPiece"
         android:padding="@dimen/piece_padding"
         android:scaleType="matrix"
@@ -288,7 +288,7 @@
         android:id="@+id/rkaun2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="rkaun"
+        android:contentDescription="@string/rkaun"
         android:onClick="onClickPiece"
         android:padding="@dimen/piece_padding"
         android:scaleType="matrix"
@@ -298,7 +298,7 @@
         android:id="@+id/bgua1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="bgua"
+        android:contentDescription="@string/bgua"
         android:onClick="onClickPiece"
         android:padding="@dimen/piece_padding"
         android:scaleType="matrix"
@@ -308,7 +308,7 @@
         android:id="@+id/bgua2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="bgua"
+        android:contentDescription="@string/bgua"
         android:onClick="onClickPiece"
         android:padding="@dimen/piece_padding"
         android:scaleType="matrix"
@@ -318,7 +318,7 @@
         android:id="@+id/rgua1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="rgua"
+        android:contentDescription="@string/rgua"
         android:onClick="onClickPiece"
         android:padding="@dimen/piece_padding"
         android:scaleType="matrix"
@@ -328,7 +328,7 @@
         android:id="@+id/rgua2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="rgua"
+        android:contentDescription="@string/rgua"
         android:onClick="onClickPiece"
         android:padding="@dimen/piece_padding"
         android:scaleType="matrix"
@@ -338,7 +338,7 @@
         android:id="@+id/bkauk1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="bkauk"
+        android:contentDescription="@string/bkauk"
         android:onClick="onClickPiece"
         android:padding="@dimen/piece_padding"
         android:scaleType="matrix"
@@ -348,7 +348,7 @@
         android:id="@+id/bkauk2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="bkauk"
+        android:contentDescription="@string/bkauk"
         android:onClick="onClickPiece"
         android:padding="@dimen/piece_padding"
         android:scaleType="matrix"
@@ -358,7 +358,7 @@
         android:id="@+id/bkauk3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="bkauk"
+        android:contentDescription="@string/bkauk"
         android:onClick="onClickPiece"
         android:padding="@dimen/piece_padding"
         android:scaleType="matrix"
@@ -368,7 +368,7 @@
         android:id="@+id/bkauk4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="bkauk"
+        android:contentDescription="@string/bkauk"
         android:onClick="onClickPiece"
         android:padding="@dimen/piece_padding"
         android:scaleType="matrix"
@@ -378,7 +378,7 @@
         android:id="@+id/bkauk5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="bkauk"
+        android:contentDescription="@string/bkauk"
         android:onClick="onClickPiece"
         android:padding="@dimen/piece_padding"
         android:scaleType="matrix"
@@ -388,7 +388,7 @@
         android:id="@+id/bkauk6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="bkauk"
+        android:contentDescription="@string/bkauk"
         android:onClick="onClickPiece"
         android:padding="@dimen/piece_padding"
         android:scaleType="matrix"
@@ -398,7 +398,7 @@
         android:id="@+id/bkauk7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="bkauk"
+        android:contentDescription="@string/bkauk"
         android:onClick="onClickPiece"
         android:padding="@dimen/piece_padding"
         android:scaleType="matrix"
@@ -408,7 +408,7 @@
         android:id="@+id/bkauk8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="bkauk"
+        android:contentDescription="@string/bkauk"
         android:onClick="onClickPiece"
         android:padding="@dimen/piece_padding"
         android:scaleType="matrix"
@@ -418,7 +418,7 @@
         android:id="@+id/rkauk1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="rkauk"
+        android:contentDescription="@string/rkauk"
         android:onClick="onClickPiece"
         android:padding="@dimen/piece_padding"
         android:scaleType="matrix"
@@ -428,7 +428,7 @@
         android:id="@+id/rkauk2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="rkauk"
+        android:contentDescription="@string/rkauk"
         android:onClick="onClickPiece"
         android:padding="@dimen/piece_padding"
         android:scaleType="matrix"
@@ -438,7 +438,7 @@
         android:id="@+id/rkauk3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="rkauk"
+        android:contentDescription="@string/rkauk"
         android:onClick="onClickPiece"
         android:padding="@dimen/piece_padding"
         android:scaleType="matrix"
@@ -448,7 +448,7 @@
         android:id="@+id/rkauk4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="rkauk"
+        android:contentDescription="@string/rkauk"
         android:onClick="onClickPiece"
         android:padding="@dimen/piece_padding"
         android:scaleType="matrix"
@@ -458,7 +458,7 @@
         android:id="@+id/rkauk5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="rkauk"
+        android:contentDescription="@string/rkauk"
         android:onClick="onClickPiece"
         android:padding="@dimen/piece_padding"
         android:scaleType="matrix"
@@ -468,7 +468,7 @@
         android:id="@+id/rkauk6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="rkauk"
+        android:contentDescription="@string/rkauk"
         android:onClick="onClickPiece"
         android:padding="@dimen/piece_padding"
         android:scaleType="matrix"
@@ -478,7 +478,7 @@
         android:id="@+id/rkauk7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="rkauk"
+        android:contentDescription="@string/rkauk"
         android:onClick="onClickPiece"
         android:padding="@dimen/piece_padding"
         android:scaleType="matrix"
@@ -488,7 +488,7 @@
         android:id="@+id/rkauk8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="rkauk"
+        android:contentDescription="@string/rkauk"
         android:onClick="onClickPiece"
         android:padding="@dimen/piece_padding"
         android:scaleType="matrix"
